Fixed bottom white space

--- a/client/src/Publication-design.css
+++ b/client/src/Publication-design.css
@@ -8,7 +8,7 @@
     font-size: 16px;
     line-height: 1.4;
     word-wrap: break-word;
-    min-height: 100vh;
+    min-height: 40vh;
     padding: 0 12px;
 }
 
